# parser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  celery_worker.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
docs/: acceptance-tests.md  api-design.md  architecture.md  cabinet-plan.md  celery-pipeline.md  checklist.md  data-model.md  development-plan.md  index.md  integration-verification-report.md  integrations.md  project-brief.md  runtime-and-dependencies.md
docs/agent-skills/m4-api/: SKILL.md
docs/agent-skills/m4-backend/: SKILL.md
docs/agent-skills/m4-celery-pipeline/: SKILL.md
docs/agent-skills/m4-integrations/: SKILL.md
scripts/: acceptance.ps1  container-acceptance.ps1
src/aibot/: __init__.py  authorize_telegram.py  config.py  demo.py  logging_config.py  main.py  smoke.py  verify_integrations.py
src/aibot/api/: __init__.py  deps.py
src/aibot/cabinet/: __init__.py  admin.py  audit_admin.py  auth.py  credentials.py  dashboard.py  dashboard_repository.py  entity_read.py  entity_repository.py  errors_admin.py  keywords_admin.py  middleware.py  mutations.py  news_admin.py  operation_routes.py  operational_read.py  operational_repository.py  operations.py  page_helpers.py  passwords.py  permissions.py  pipeline_admin.py  posts_admin.py  redis_store.py  (+3 more)
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_alembic_migrations.py  test_cabinet_dashboard_repository.py  test_cabinet_operations.py  test_cabinet_security_store.py  test_redis_infrastructure.py  test_sources_keywords_database_api.py
tests/unit/: __init__.py  test_ai_client.py  test_ai_runtime_contract.py  test_alembic_configuration.py  test_cabinet_dashboard.py  test_cabinet_mutations.py  test_cabinet_operation_queue.py  test_cabinet_read_pages.py  test_cabinet_runtime_contract.py  test_cabinet_security.py  test_celery_database_runtime.py  test_celery_failure_logging.py  test_celery_task_queue.py  test_demo_pipeline.py  test_health.py  test_http_client.py  test_integration_verification.py  test_keywords_api.py  test_language_filtering.py  test_models_metadata.py  test_news_filtering_service.py  test_news_ingestion_service.py  test_parsing_filtering_deduplication.py  test_pipeline_run_service.py  test_pipeline_service.py  test_post_generation_service.py  test_publishing_and_tasks.py  test_read_and_generation_api.py  test_rss_parser.py  test_source_batch_parsing_service.py  test_sources_api.py  test_telegram_parser_and_client.py  test_telegram_post_composer.py  test_telegram_publishers.py
(+107 files in other folders)
