[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "m4-aibot"
version = "0.1.0"
description = "AI-powered Telegram news post generator built with FastAPI, Celery, PostgreSQL, and Telethon."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Project M4 Student" },
]
keywords = [
  "fastapi",
  "celery",
  "telegram",
  "telethon",
  "openai",
  "postgresql",
  "news",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "alembic>=1.13",
  "asyncpg>=0.29",
  "beautifulsoup4>=4.12",
  "celery[redis]>=5.4",
  "codex-fastapi-cabinet==0.1.0",
  "fastapi>=0.115",
  "feedparser>=6.0",
  "httpx>=0.27",
  "itsdangerous>=2.2,<3.0",
  "langdetect>=1.0",
  "lxml>=5.2",
  "codex-ai[openai]==0.2.5",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pwdlib[argon2]>=0.2,<1.0",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "requests>=2.32",
  "sqlalchemy[asyncio]>=2.0",
  "telethon>=1.36",
  "tenacity>=8.5",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pre-commit>=3.8",
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
test = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "testcontainers[postgres]>=4.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aibot"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
  "integration: tests that require local infrastructure such as PostgreSQL",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
files = ["src/aibot", "tests"]
plugins = []
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "celery",
  "fastapi_cabinet",
  "fastapi_cabinet.*",
  "feedparser",
  "langdetect",
  "langdetect.*",
  "telethon",
]
ignore_missing_imports = true
